# ChatApp

./: .gitignore  CMakeLists.txt  README.md
Release/: ChatApp.lnk  Server-auth.lnk  Server-chat.lnk
auth_server/: CMakeLists.txt  main.cpp
auth_server/auth/: AuthController.cpp  AuthController.h
auth_server/db/: UserStorage.cpp  UserStorage.h
auth_server/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
auth_server/server/: Server.cpp  Server.h
auth_server/session/: ClientSession.cpp  ClientSession.h
auth_server/validation/: ValidationServer.cpp  ValidationServer.h
chat_server/: CMakeLists.txt
chat_server/auth/: AuthValidator.cpp  AuthValidator.h
chat_server/chat/: MessageRouter.cpp  MessageRouter.h
chat_server/gui/: MainWindow.cpp  MainWindow.ui  mainwindow.h
chat_server/server/: Server.cpp  Server.h
chat_server/session/: ClientSession.cpp  ClientSession.h
client/: CMakeLists.txt  main.cpp
client/app/: ApplicationController.cpp  ApplicationController.h
client/auth/: AuthService.cpp  AuthService.h
client/chat/: ChatListModel.cpp  ChatListModel.h  ChatService.cpp  ChatService.h  MessageModel.cpp  MessageModel.h
client/network/: Client.cpp  Client.h
client/qml/: Auth.qml  Chat.qml
common/: AuthProtocol.h  CMakeLists.txt  ChatProtocol.h  Utils.h  ValidationProtocol.h
